--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -29,7 +29,7 @@
 .sidebar-page-container .news-block-one .inner-box .lower-content .link a{
 	transform: scale(1);
 	opacity: 1;
-	color: #1b182f;
+	color: #0285bf;
 }
 
 .sidebar-page-container .news-block-one .inner-box .lower-content .link a:hover{
@@ -168,7 +168,7 @@
 
 .blog-sidebar .post-widget .post h6 a{
 	display: inline-block;
-	color: #1b182f;
+	color: #0285bf;
 }
 
 .blog-sidebar .post-widget .post h6 a:hover{
@@ -193,7 +193,7 @@
 	display: inline-block;
 	font-size: 16px;
 	font-weight: 500;
-	color: #73727c;
+	color:#0285bf;
 }
 
 .blog-sidebar .category-list li a:hover{
@@ -213,7 +213,7 @@
 	display: inline-block;
 	font-size: 11px;
 	line-height: 20px;
-	color: #73727c;
+	color: #0285bf;
 	font-weight: 700;
 	text-transform: uppercase;
 	background: #fff;
@@ -293,7 +293,7 @@
 }
 
 .blog-details-content .post-share-option .tags-list li a:hover{
-	background: #1b182f;
+	background: #0285bf;
 }
 
 .blog-details-content .post-share-option .social-links li{
@@ -435,7 +435,7 @@
 }
 
 .blog-details-content .comment-box .comment .reply-btn:hover{
-	background: #1b182f;
+	background: #0285bf;
 }
 
 .blog-details-content .comment-box{
