--- a/assets/css/color.css
+++ b/assets/css/color.css
@@ -1,298 +1,298 @@
 /* template-color */
 
 .preloader-close{
-	color: #b1bc05;
+	color: #d7d900;
 }
 
 .header-top .info-list li i{
-	color: #b1bc05;
+	color: #d7d900;
 }
 
 .header-top .info-list li a:hover{
-  color: #b1bc05;
+  color: #d7d900;
 }
 
 .header-top .social-links li a:hover{
-  color: #b1bc05;
+  color: #d7d900;
 }
 
 .header-top .btn-box a{
-	background: #b1bc05;
+	background: #d7d900;
 }
 
 .header-top .btn-box a:hover{
-  color: #b1bc05;
+  color: #d7d900;
 }
 
 .main-header .search-panel .search-btn{
-	background: #b1bc05;
+	background: #d7d900;
 }
 
 .main-menu .navigation > li > ul > li > a:hover,
 .main-menu .navigation > li > .megamenu li > a:hover{
-	color: #b1bc05;
+	color: #d7d900;
 }
 
 .main-menu .navigation > li > ul > li > ul > li > a:hover{
-  color: #b1bc05;
+  color: #d7d900;
 }
 
 .main-menu .navigation > li > a:before{
-	background: #b1bc05;
+	background: #d7d900;
 }
 
 .main-header .search-box-btn:hover{
-	color: #b1bc05 !important;
+	color: #d7d900 !important;
 }
 
 .theme-btn.btn-one{
-  background: #b1bc05;
+  background: #d7d900;
 }
 
 .banner-carousel .content-box h3{
-	border-bottom: 2px solid #b1bc05;
+	border-bottom: 2px solid #d7d900;
 }
 
 .theme-color{
-	color: #b1bc05;
+	color: #d7d900;
 }
 
 .hov-color:hover{
-	color: #b1bc05 !important;
+	color: #d7d900 !important;
 }
 
 .feature-block-one .inner-box .icon-box:before{
-	background: #b1bc05;
+	background: #d7d900;
 }
 
 .feature-block-one .inner-box:before{
-	border: 1px solid #b1bc05;
+	border: 1px solid #d7d900;
 }
 
 .list-style-one li:before{
-	color: #b1bc05;
+	color: #d7d900;
 }
 
 .image_block_1 .image-box:before{
-	background: #b1bc05;
+	background: #d7d900;
 }
 
 .service-section .more-text a{
-	border-bottom: 2px solid #b1bc05;
+	border-bottom: 2px solid #d7d900;
 }
 
 .service-block-one .inner-box .lower-content:after{
-	background: #b1bc05;
+	background: #d7d900;
 }
 
 .testimonial-block-one .inner-box .quote{
-	background: #b1bc05;
+	background: #d7d900;
 }
 
 .coaching-block-one .inner-box h3 a{
-	border-top: 2px solid #b1bc05;
+	border-top: 2px solid #d7d900;
 }
 
 .theme-color-bg{
-	background: #b1bc05;
+	background: #d7d900;
 }
 
 .news-block-one .inner-box .image-box .post-date{
-	background: #b1bc05;
+	background: #d7d900;
 }
 
 .main-footer .top-inner .info-box .icon-box{
-	color: #b1bc05;
+	color: #d7d900;
 }
 
 .main-footer .top-inner .info-box h5 a:hover{
-  color: #b1bc05;
+  color: #d7d900;
 }
 
 .main-footer .widget-section a:hover{
-  color: #b1bc05;
+  color: #d7d900;
 }
 
 .main-footer .widget-section .social-links li a:hover{
-  background: #b1bc05;
+  background: #d7d900;
 }
 
 .main-footer .widget-section .newsletter-widget .form-group input:focus{
-  border-color: #b1bc05 !important;
+  border-color: #d7d900 !important;
 }
 
 .main-footer .widget-section .newsletter-widget .form-group input:focus + button,
 .main-footer .widget-section .newsletter-widget .form-group button:hover{
-	color: #b1bc05;
+	color: #d7d900;
 }
 
 .footer-bottom a:hover{
-  color: #b1bc05;
+  color: #d7d900;
 }
 
 .scroll-top:hover{
-	background: #b1bc05;
+	background: #d7d900;
 }
 
 .main-header .nav-right .info-box i{
-	color: #b1bc05;
+	color: #d7d900;
 }
 
 .main-header .nav-right .info-box h5 a:hover{
-	color: #b1bc05;
+	color: #d7d900;
 }
 
 .banner-section.style-two .content-box h3{
-	color: #b1bc05;
+	color: #d7d900;
 }
 
 .banner-section.style-two .content-box:before{
-	background: #b1bc05;
+	background: #d7d900;
 }
 
 .country-block-one .inner-box .lower-content:after{
-	background: #b1bc05;
+	background: #d7d900;
 }
 
 .country-block-one .inner-box:hover .lower-content{
-	border-color:#b1bc05;
+	border-color:#d7d900;
 }
 
 .service-block-one .inner-box:before{
-	border: 1px solid #b1bc05;
+	border: 1px solid #d7d900;
 }
 
 .service-block-one .inner-box:after{
-	background: #b1bc05;
+	background: #d7d900;
 }
 
 .team-block-one .inner-box .social-links li a:hover{
-  background: #b1bc05;
+  background: #d7d900;
 }
 
 .processing-block-one .inner-box .icon-box span:before{
-	background: #b1bc05;
+	background: #d7d900;
 }
 
 .theme-btn.btn-two:before,
 .theme-btn.btn-two:after{
-  background: #b1bc05;
+  background: #d7d900;
 }
 
 .page-title .bread-crumb li a:hover{
-	color: #b1bc05;
+	color: #d7d900;
 }
 
 .progress-box .bar-inner{
-	background: #b1bc05;
+	background: #d7d900;
 }
 
 .team-details .content-box .social-links li a:hover{
-  background: #b1bc05;
-  border-color: #b1bc05;
+  background: #d7d900;
+  border-color: #d7d900;
 }
 
 .team-details .image-box .info li a:hover{
-	color: #b1bc05;
+	color: #d7d900;
 }
 
 .default-form .form-group input:focus,
 .default-form .form-group textarea:focus{
-	border-color: #b1bc05 !important;
+	border-color: #d7d900 !important;
 }
 
 .coaching-sidebar .category-list li a.current:after,
 .coaching-sidebar .category-list li a:hover:after{
-  color: #b1bc05;
+  color: #d7d900;
 }
 
 .coaching-details-content .content-three .list li:before{
-	color: #b1bc05;
+	color: #d7d900;
 }
 
 .accordion-box .block .acc-btn.active .icon-outer:before{
-	color: #b1bc05;
+	color: #d7d900;
 }
 
 .sidebar-page-container .news-block-one .inner-box .lower-content .link a:hover{
-	color: #b1bc05;
+	color: #d7d900;
 }
 
 .blog-sidebar .search-widget .search-form .form-group{
-	background: #b1bc05;
+	background: #d7d900;
 }
 
 .blog-sidebar .post-widget .post h6 a:hover{
-	color: #b1bc05;
+	color: #d7d900;
 }
 
 .blog-sidebar .category-list li a:hover{
-	color: #b1bc05;
+	color: #d7d900;
 }
 
 .blog-sidebar .tags-widget .tags-list li a:hover{
-	background: #b1bc05;
+	background: #d7d900;
 }
 
 .blog-details-content .post-share-option .tags-list li a{
-	background: #b1bc05;
+	background: #d7d900;
 }
 
 .blog-details-content .post-share-option .social-links li a:hover{
-	background: #b1bc05;
+	background: #d7d900;
 }
 
 .blog-details-content .comment-box .comment .reply-btn{
-	background: #b1bc05;
+	background: #d7d900;
 }
 
 .blog-details-content .comments-form-area .form-group input:focus,
 .blog-details-content .comments-form-area .form-group textarea:focus{
-	border-color: #b1bc05 !important;
+	border-color: #d7d900 !important;
 }
 
 .contact-section #contact-form input:focus,
 .contact-section #contact-form textarea:focus{
-	border-color: #b1bc05 !important;
+	border-color:#d7d900 !important;
 }
 
 .contact-section .info-inner .info-list li a:hover{
-  color: #b1bc05;
+  color: #d7d900;
 }
 
 .contact-section .info-inner .social-links li a:hover{
-	background: #b1bc05;
+	background: #d7d900;
 }
 
 .service-details .service-sidebar .sidebar-download{
-	background: #b1bc05;
+	background: #d7d900;
 }
 
 .service-details .service-sidebar .sidebar-categories .categories-list li a:before{
-	background: #b1bc05;
+	background: #d7d900;
 }
 
 .service-details .service-sidebar .sidebar-categories-2 .categories-list li a:hover{
-  color: #b1bc05;
+  color: #d7d900;
 }
 
 .service-details .service-sidebar .sidebar-categories-2 .categories-list li a:hover:after{
-  color: #b1bc05;
+  color: #d7d900;
 }
 
 .service-details .service-sidebar .sidebar-assessment .assessment-form .form-group input:focus,
 .service-details .service-sidebar .sidebar-assessment .assessment-form .form-group textarea:focus{
-	border-color: #b1bc05 !important;
+	border-color: #d7d900 !important;
 }
 
 .service-details-content .content-style-two .inner-box .single-item .icon-box{
-	color: #b1bc05;
+	color: #d7d900;
 }
 
 .service-details-content .two-column .content-box .list li:before{
-	color: #b1bc05;
+	color: #d7d900;
 }
 
 .service-details-content .accordion-box .block .acc-btn.active h5{
-  color: #b1bc05;
+  color: #d7d900;
 }
