--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -111,8 +111,11 @@ ul,li{
   list-style:none;
   padding:0px;
   margin:0px; 
+  font-family: montserrat;
 }
-
+.card-1 li{
+  list-style-type: circle;
+}
 input{
   transition: all 500ms ease;
 }
@@ -157,7 +160,7 @@ h1,h2,h3,h4,h5,h6{
   left: 0;
   top: 0;
   width: 100%;
-  background: #1b182f;
+  background: #0285bf;
   z-index: 9999999;
 }
 
@@ -412,7 +415,7 @@ img {
   line-height: 50px;
   background: #ffffff;
   text-align: center;
-  color: #141417;
+  color: #0285bf;
   border-radius: 5px;
   z-index: 1;
   border: 1px solid #e5e5e5;
@@ -445,7 +448,7 @@ img {
   border-radius: 50%;
   text-align: center;
   cursor: pointer;
-  background: #1b182f;
+  background: #0285bf;
   border: 1px solid rgba(255, 255, 255, 0.30);
   transition: 1s ease;
 }
@@ -646,7 +649,7 @@ img {
 .main-header .search-box-btn{
   position: relative;
   font-size: 24px;
-  color: #1b182f;
+  color: #0285bf;
   background: transparent;
   font-weight: 700;
   transition: all 500ms ease;
@@ -660,7 +663,7 @@ img {
   right: 0;
   left: auto !important;
   transform: translate3d(0px, 0px, 0px) scale3d(0.8,0.8,0.8) !important;
-  background: #1b182f;
+  background: #0285bf;
   border-radius: 0px;
   transition: .5s ease;
   display: block;
@@ -693,7 +696,7 @@ img {
   line-height: 24px;
   padding: 9px 65px 9px 15px;
   height: 50px;
-  color: #222;
+  color: #0285bf;
   border-radius: 3px;
   background-color: #fff;
 }
@@ -756,7 +759,7 @@ img {
   padding: 32px 0px;
   font-weight:500;
   opacity:1;
-  color: #73727c;
+  color: #0285bf;
   overflow: hidden;
   z-index:1;
   -webkit-transition:all 500ms ease;
@@ -785,7 +788,7 @@ img {
 
 .main-menu .navigation > li.current > a,
 .main-menu .navigation > li:hover > a{
-  color: #1b182f;
+  color: #0285bf;
 }
 
 .main-menu .navigation > li > ul,
@@ -799,7 +802,7 @@ img {
   display:none;
   opacity: 0;
   visibility: hidden;
-  background: #1b182f;
+  background: #0285bf;
   transition:all 500ms ease;
   -moz-transition:all 500ms ease;
   -webkit-transition:all 500ms ease;
@@ -883,7 +886,7 @@ img {
   width:230px;
   z-index:100;
   display:none;
-  background: #1b182f;
+  background: #0285bf;
   transition:all 500ms ease;
   -moz-transition:all 500ms ease;
   -webkit-transition:all 500ms ease;
@@ -967,7 +970,7 @@ img {
   text-align:center;
   font-size:18px;
   line-height:26px;
-  color:#3b3b3b;
+  color:#0285bf;
   cursor:pointer;
   display: none;
   z-index:5;
@@ -999,7 +1002,7 @@ img {
   width: 30px;
   display: block;
   margin-bottom: 5px;
-  background-color: #222;
+  background-color: #0285bf;
   -webkit-transition: all 300ms ease;
   -moz-transition: all 300ms ease;
   -ms-transition: all 300ms ease;
@@ -1050,7 +1053,7 @@ img {
   font-size: 40px;
   line-height: 50px;
   cursor: pointer;
-  color:#3786ff;
+  color:#0285bf;
   display: none;
 }
 
@@ -1115,7 +1118,7 @@ img {
   height: 100%;
   max-height: 100%;
   overflow-y: auto;
-  background: #141417;
+  background: #0285bf;
   padding: 0px 0px;
   z-index: 5;
   opacity: 0;
@@ -1342,7 +1345,7 @@ div#mCSB_1_container{
 .header-top .top-inner{
   position: relative;
   padding-left: 40px;
-  background: #1b182f;
+  background: #0285bf;
   border-bottom-left-radius: 8px;
   z-index: 1;
 }
@@ -1350,7 +1353,7 @@ div#mCSB_1_container{
 .header-top .top-inner:before{
   position: absolute;
   content: '';
-  background: #1b182f;
+  background: #0285bf;
   width: 7000px;
   height: 100%;
   left: 0px;
@@ -1375,7 +1378,7 @@ div#mCSB_1_container{
 }
 
 .header-top .info-list li a{
-  color: #9390a7;
+  color: #f4f3f9;
 }
 
 .header-top .info-list li a:hover{
@@ -1405,7 +1408,7 @@ div#mCSB_1_container{
   position: relative;
   display: inline-block;
   font-size: 14px;
-  color: #9390a7;
+  color: #f4f3f9;
 }
 
 .header-top .social-links li a:hover{
@@ -1503,7 +1506,7 @@ div#mCSB_1_container{
 /** header-style-two **/
 
 .main-header.style-two{
-  background: #1b182f;
+  background: #0285bf;
 }
 
 .main-header.style-two .header-lower{
@@ -1512,7 +1515,7 @@ div#mCSB_1_container{
 }
 
 .main-header.style-two .header-lower .main-menu .navigation > li > a{
-  color: #7f7c96;
+  color: #f4f3f9;
   padding: 44px 0px;
 }
 
@@ -1557,7 +1560,7 @@ div#mCSB_1_container{
   line-height: 20px;
   font-weight: 500;
   text-transform: uppercase;
-  color: #9390a7;
+  color: #f4f3f9;
   margin-bottom: 6px;
   letter-spacing: 1px;
 }
@@ -1604,7 +1607,7 @@ div#mCSB_1_container{
 
 .main-footer{
   position: relative;
-  background: #1b182f;
+  background: #0285bf;
 }
 
 .main-footer .footer-top{
@@ -1642,7 +1645,7 @@ div#mCSB_1_container{
   line-height: 20px;
   font-weight: 500;
   text-transform: uppercase;
-  color: #9390a7;
+  color: #fff;
   margin-bottom: 6px;
   letter-spacing: 1px;
 }
@@ -1684,7 +1687,7 @@ div#mCSB_1_container{
 .main-footer .widget-section a{
   font-size: 16px;
   line-height: 36px;
-  color: #9390a7;
+  color: #fff;
   font-weight: 500;
 }
 
@@ -1755,8 +1758,8 @@ div#mCSB_1_container{
   height: 60px;
   font-size: 14px;
   font-weight: 500;
-  color: #9390a7;
-  border-bottom: 3px solid #494659;
+  color: #fff;
+  border-bottom: 3px solid #fff;
   transition: all 500ms ease;
 }
 
@@ -1771,7 +1774,7 @@ div#mCSB_1_container{
   right: 10px;
   font-size: 16px;
   background: transparent;
-  color: #494659;
+  color: #fff;
   transition: all 500ms ease;
 }
 
@@ -1784,7 +1787,7 @@ div#mCSB_1_container{
 .footer-bottom{
   position: relative;
   width: 100%;
-  background: #25223c;
+  background: #d7d900;
   padding: 25px 0px;
 }
 
@@ -1792,7 +1795,7 @@ div#mCSB_1_container{
 .footer-bottom a{
   font-size: 16px;
   line-height: 36px;
-  color: #9390a7;
+  color: #0285bf;
   font-weight: 500;
 }
 
