--- a/assets/css/service.css
+++ b/assets/css/service.css
@@ -17,7 +17,7 @@
   font-size: 18px;
   line-height: 28px;
   font-weight: 500;
-  color: #222;
+  color: #0285bf;
   padding: 21px 40px;
   background: #e7ecf2;
   z-index: 1;
@@ -192,7 +192,7 @@
   display: inline-block;
   font-size: 18px;
   font-weight: 500;
-  color: #222;
+  color: #0285bf;
   padding: 2px 0px;
   padding-left: 52px;
 }
@@ -249,16 +249,16 @@
   border-radius: 2px;
   font-size: 15px;
   font-weight: 300;
-  color: #222;
+  color: #0285bf;
   padding: 10px 20px;
 }
 
 .service-details .service-sidebar .sidebar-assessment .assessment-form .form-group input::-webkit-input-placeholder{
-  color:#222;
+  color:#0285bf;
 }
 
 .service-details .service-sidebar .sidebar-assessment .assessment-form .form-group textarea::-webkit-input-placeholder{
-  color:#222;
+  color:#0285bf;
 }
 
 .service-details .service-sidebar .sidebar-assessment .assessment-form .form-group textarea{
@@ -291,7 +291,7 @@
   display: block;
   font-size: 36px;
   line-height: 45px;
-  color: #222;
+  color: #0285bf;
   margin: 0px;
 }
 
@@ -309,7 +309,7 @@
   position: relative;
   font-size: 22px;
   line-height: 30px;
-  color: #555;
+  color: #0285bf;
   font-weight: 400;
   margin-bottom: 15px;
 }
@@ -349,9 +349,9 @@
 
 .service-details-content .two-column .content-box .list li a{
   display: inline-block;
-  color: #2d5883;
+  color: #0285bf;
   line-height: 16px;
-  border-bottom: 1px solid #2d5883;
+  border-bottom: 1px solid #0285bf;
 }
 
 .service-details-content .two-column{
@@ -461,7 +461,7 @@
   font-size: 18px;
   line-height: 28px;
   font-weight: 600;
-  color: #222;
+  color: #0285bf;
   margin: 0px;
   transition: all 500ms ease;
 }
